# flaskwithpsql

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.py  db_manage.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.agent/rules/: code-style-guide.md
.github/workflows/: ci.yml  commit-lint.yml  dependency-check.yml
app/: __init__.py  version.py
app/auth/: __init__.py  routes.py
app/models/: __init__.py  associations.py  base.py  permission.py  role.py  user.py
app/rbac/: __init__.py  decorators.py  exceptions.py  permissions.py  services.py
app/routes/: __init__.py  main.py  users.py  web.py
app/schemas/: __init__.py  base.py  rbac.py  user.py  utils.py  validators.py
app/services/: __init__.py  auth_service.py  user_service.py
app/templates/: health.html  index.html  test.html
app/utils/: __init__.py  error_handlers.py  logging_config.py  rate_limiter.py  responses.py
docker/: init-db.sql
docs/: BASE_MODEL_EXPLAINED.md  CONFIG_EXPLAINED.md  CREATE_APP_EXPLAINED.md  DATABASE_MANAGEMENT.md  DOCKER_GUIDE.md  FLASK_BLUEPRINTS_EXPLAINED.md  FLASK_CORS_EXPLAINED.md  FLASK_MIGRATE_EXPLAINED.md  FLASK_OPENAPI3_GUIDE.md  FLASK_SETUP_COMMANDS.md  Flask_PostgreSQL_Migrations_Guide.md  JWT_AUTHENTICATION.md  LOGGING_EXPLAINED.md  LOGGING_SYSTEM.md  PRE_COMMIT_CROSS_PLATFORM.md  PYDANTIC_VALIDATION_GUIDE.md  PYTHON_FLASK_GUIDE.md  RATE_LIMITING.md  RBAC.md  REPOSITORY_FIXES_SUMMARY.md  RESET_FUNCTIONS_EXPLAINED.md  SERVICES_LAYER.md  STANDARDIZED_API_RESPONSES.md  TESTING_GUIDE.md  WINDOWS_SETUP_GUIDE.md
docs/error-handling/: database-error-handling.md  global-error-handling.md
migrations/versions/: 06ffc6d4c520_auto_migration.py  b6c582ddf3ee_add_user_table.py
repo_docs/: _index.md  known_issues.md
repo_docs/00_start_here/: 0.1_welcome.md  0.2_repository_overview.md  0.3_folder_structure.md  0.4_express_to_flask.md  0.5_quick_start.md
repo_docs/01_python_basics/: 1.1_python_for_js_devs.md  1.2_virtual_environments.md  1.3_imports_and_modules.md  1.4_decorators_explained.md  1.5_type_hints.md  1.6_context_managers.md  1.7_classes_and_oop.md  1.8_common_patterns.md
repo_docs/02_flask_fundamentals/: 2.1_what_is_flask.md  2.2_app_factory_pattern.md  2.3_configuration.md  2.4_blueprints.md  2.5_request_lifecycle.md  2.6_flask_extensions.md  2.7_application_context.md  2.8_our_app_init.md  2.9_cors.md
repo_docs/03_database/: 3.10_db_manage_script.md  3.11_database_errors.md  3.12_er_diagram.md  3.1_sqlalchemy_overview.md  3.2_database_setup.md  3.3_models_explained.md  3.4_base_model.md  3.5_user_model.md  3.6_relationships.md  3.7_querying_data.md  3.8_migrations_overview.md  3.9_flask_migrate.md
repo_docs/04_api_design/: 4.10_response_format.md  4.11_api_versioning.md  4.11_error_handling.md  4.1_rest_api_basics.md  4.2_openapi_swagger.md  4.3_routes_structure.md  4.4_api_versioning.md  4.5_main_routes.md  4.6_user_routes.md  4.7_pydantic_overview.md  4.8_schemas_explained.md  4.9_validation_flow.md
repo_docs/05_authentication/: 5.1_auth_overview.md  5.2_jwt_explained.md  5.3_flask_jwt_extended.md  5.4_auth_routes.md  5.5_protecting_routes.md  5.6_token_lifecycle.md  5.7_password_security.md  5.8_rbac_architecture.md  5.9_rbac_implementation.md
repo_docs/06_architecture/: 6.1_architecture_overview.md  6.2_service_layer.md  6.3_user_service.md  6.4_error_classes.md  (+3 more)
scripts/: setup_hooks.py
tests/: conftest.py
(+38 files in other folders)
