[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flaskwithpsql"
version = "1.0.0"
description = "A Flask backend learning project with PostgreSQL"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tejas Nirala"}
]
keywords = ["flask", "postgresql", "api", "backend", "jwt", "authentication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-Migrate>=4.0.5",
    "Flask-JWT-Extended>=4.6.0",
    "Flask-Limiter>=3.5.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "flask-cors>=4.0.0",
    "pydantic>=2.5.0",
    "email-validator>=2.1.0",
    "flask-openapi3>=3.1.0",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.7",
    "safety>=2.3.0",
]

[project.urls]
Repository = "https://github.com/tejasnirala/flaskwithpsql"

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = ["venv", ".venv", "migrations"]
known_first_party = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
exclude = ["venv", "migrations", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.*"
# Flask/SQLAlchemy returns Any in many places, ignore these
warn_return_any = false


[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "migrations"]
# B101: assert used in tests
# B104: binding to all interfaces (needed for Docker)
# B105: hardcoded password string (false positives on error codes like TOKEN_EXPIRED)
# B404: subprocess import (needed for db_manage.py)
# B602: subprocess with shell=True (controlled usage in db_manage.py)
skips = ["B101", "B104", "B105", "B404", "B602"]
